# Scripta

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: args.rs  cli.rs  compile.rs  file_walker.rs  main.rs  parser.rs  serve.rs  watcher.rs  write.rs
