[package]
name = "Scripta"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
notify = "8.0.0"
pulldown-cmark = "0.9.3"
regex = "1.11.1"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.45", features = ["derive"] }
pathdiff = "0.2.3"
tiny_http = "0.12.0"
mime_guess = "2.0.5"
